assets/css/style.css
body {
    margin: 0px;
    font-size: 18px;
    font-family: "Arial", "Helvetica Neue", "Helvetica", "sans-serif";
    background-image: url(../images/crossline-dots.png);
}

header {
    border-bottom: 2px solid  #cccccc;
    margin: 0px;
    background: white;
}

h1 {
    font-family: "Georgia", "Times", "Times New Roman", "serif";
    font-weight: bold;
    font-size: 2em;
    padding-top: 20px;
    padding-bottom: 20px;
}

.divHeader {
    width: 960px;
    margin-right: auto;
    margin-left: auto;
    margin-top: 0px;
    overflow: auto;
}

.divPList {
    color: #777777;
    float: right;
    padding-top: 30px;
}

ul {
    list-style-type: none;
    margin: 0px;
}

li {
    display: inline;
}

#liMiddle {
    border-left: 1px solid #cccccc;
    border-right: 1px solid #cccccc;
    padding-left: 5px;
    padding-right: 5px;
}

.divName {
    background: #4aaaa5;
    color: #ffffff;
    height: 100%;
    margin-top: 0%;
    float: left;
    padding-left: 10px;
    padding-right: 10px;
}

.divMContent {
    width: 960px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 40px;
    clear: both;
    border: 1px solid #dddddd;
    background: white;
}

.mContHead {
    color: #4aaaa5;
}

.divInsideM {
    padding: 20px;
    padding-top: 10px;
}

#profilePic {
    float: left;
}

#p1 {
    float: left;
}

#button {
    background: #4aaaa5;
    border: 0;
    color: #ffffff;
    padding: 5px 20px 5px 20px;
}

.textInputs {
    margin-top: 5px;
    width: 100%;
}

#message {
    height: 150px;
}

footer {
    text-align: center;
    background: #666666;
    color: #777777;
    border-top: 10px solid #4aaaa5;
    padding-top: 50px;
    padding-bottom: 5px;
    font-size: 0.75em;
    position: fixed;
    bottom: 0;
    width: 100%;
}

.clear {
    clear: both;
}

